nav iPhone alignment fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -94,7 +94,7 @@ p {
 	background-color: $background-w;
 	float: none; 
 	margin: 0 25px;
-	padding: 15px 30px 30px 30px;
+	padding: 15px 40px 40px 40px;
 }
 
 .navbar-default .navbar-brand:hover {
@@ -103,7 +103,7 @@ p {
 
 .navbar-header {
     float: left;
-    padding: 0 15px 15px 15px;
+    padding: 0 0 15px 15px;
     width: 100%;
 }
 
